--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,18 @@
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
+
+.prettierignore
+
+.vscode
+
+node_modules
+dist
+.cache
+
+Thumbs.db
+.eslintrc.json
+package-lock.json
+package.json
+
+authentication.js
